flux/apps/webmail/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webmail
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: yewolf.fr-tls
  hostnames:
  - "mail.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: webmail
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
